WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
285627
REGRESSION (
288518@main
): [ macOS debug wk2 ] http/tests/navigation/forward-and-cancel.html is a flaky crash
https://bugs.webkit.org/show_bug.cgi?id=285627
Summary
REGRESSION (288518@main): [ macOS debug wk2 ] http/tests/navigation/forward-a...
Karl Rackler
Reported
2025-01-08 13:16:36 PST
Description: http/tests/navigation/forward-and-cancel.html The test was consistently passing until at commit
https://commits.webkit.org/288518@main
when the test began to flaky crash. This issue can be bisected to
288518@main
using the command: run-webkit-tests --debug -f --exit-after-n-crashes-or-timeouts 1 --iterations 50 --force --no-retry http/tests/navigation/forward-and-cancel.html History:
https://results.webkit.org/?suite=layout-tests&test=http%2Ftests%2Fnavigation%2Fforward-and-cancel.html&style=debug&flavor=wk2&platform=mac
Crash Log: 0 com.apple.JavaScriptCore 0x10718624c WTF::RawPtrTraits<WTF::StringImpl>::unwrap(WTF::StringImpl* const&) 1 com.apple.JavaScriptCore 0x107bce4e8 WTF::RefPtr<WTF::StringImpl, WTF::RawPtrTraits<WTF::StringImpl>, WTF::DefaultRefDerefTraits<WTF::StringImpl>>::RefPtr(WTF::RefPtr<WTF::StringImpl, WTF::RawPtrTraits<WTF::StringImpl>, WTF::DefaultRefDerefTraits<WTF::StringImpl>> const&) 2 com.apple.JavaScriptCore 0x10799d738 WTF::RefPtr<WTF::StringImpl, WTF::RawPtrTraits<WTF::StringImpl>, WTF::DefaultRefDerefTraits<WTF::StringImpl>>::RefPtr(WTF::RefPtr<WTF::StringImpl, WTF::RawPtrTraits<WTF::StringImpl>, WTF::DefaultRefDerefTraits<WTF::StringImpl>> const&) 3 com.apple.JavaScriptCore 0x107bce4a8 WTF::String::String(WTF::String const&) 4 com.apple.JavaScriptCore 0x10799d6f8 WTF::String::String(WTF::String const&) 5 com.apple.JavaScriptCore 0x105d00974 WTF::URL::URL(WTF::URL const&, WTF::String const&, WTF::URLTextEncoding const*)
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-01-08 13:16:45 PST
<
rdar://problem/142570786
>
EWS
Comment 2
2025-01-08 13:41:08 PST
Test gardening commit
288611@main
(2a78c943ea71): <
https://commits.webkit.org/288611@main
> Reviewed commits have been landed. Closing PR #38745 and removing active labels.
Charlie Wolfe
Comment 3
2025-01-13 00:24:28 PST
Pull request:
https://github.com/WebKit/WebKit/pull/38918
EWS
Comment 4
2025-01-13 14:37:47 PST
Committed
288821@main
(ed5c3f45be27): <
https://commits.webkit.org/288821@main
> Reviewed commits have been landed. Closing PR #38918 and removing active labels.
Fujii Hironori
Comment 5
2025-01-15 17:34:49 PST
***
Bug 285579
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug