Source/WebCore/history/HistoryItem.cpp
@@ -80,6 +80,7 @@ HistoryItem::HistoryItem(const HistoryItem& item)
     , m_pageScaleFactor(item.m_pageScaleFactor)
     , m_children(item.m_children.map([](auto& child) { return child->copy(); }))
     , m_lastVisitWasFailure(item.m_lastVisitWasFailure)
+    , m_isTargetItem(item.m_isTargetItem)
     , m_itemSequenceNumber(item.m_itemSequenceNumber)
     , m_documentSequenceNumber(item.m_documentSequenceNumber)
     , m_formData(item.m_formData ? RefPtr<FormData> { item.m_formData->copy() } : nullptr)
@@ -112,6 +113,7 @@ void HistoryItem::reset()
     m_displayTitle = String();
 
     m_lastVisitWasFailure = false;
+    m_isTargetItem = false;
 
     m_itemSequenceNumber = generateSequenceNumber();
 
@@ -307,6 +309,7 @@ void HistoryItem::setChildItem(Ref<HistoryItem>&& child)
     unsigned size = m_children.size();
     for (unsigned i = 0; i < size; ++i)  {
         if (m_children[i]->target() == child->target()) {
+            child->setIsTargetItem(m_children[i]->isTargetItem());
             m_children[i] = WTFMove(child);
             return;
         }
